--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,139 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  background: whitesmoke;
+  font-family: Arial, Helvetica, sans-serif;
+}
+#root{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+.App{
+  width: 65%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.user-expenses-data{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  background: white;
+  border: 1px solid white;
+  border-radius: 7px;
+  padding: 15px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.balance-title,.income-title,.expenses-title{
+  letter-spacing: 2px;
+  font-size: 1.1rem;
+}
+
+.transaction{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  width: 95%;
+  background: white;
+  border: 1px solid white;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border-radius: 7px;
+  font-size: 1.1rem;
+  margin-bottom: 10px;
+}
+
+
+.history-title, .adding-transaction-title{
+  font-size: 1.5em;
+  width: 100%;
+  border-bottom: 0.5px solid rgba(0, 0, 0, 0.2);
+}
+
+.history{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.balance{
+  font-weight: bolder;
+  font-size: 2rem;
+}
+
+.income-div, .expenses-div{
+  text-align: center;
+}
+
+.expenses{
+  color: red;
+  font-size: 1.3rem;
+}
+
+.income{
+  color: rgb(76, 223, 120);
+  font-size: 1.3rem;
+}
+
+form{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+label{
+  font-size: 1.2rem;
+  margin-top: 10px;
+  margin-bottom: 10px;
+
+}
+
+input{
+  padding: 10px;
+  font-size: 1.1rem;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 7px;
+}
+
+
+
+.add-transaction-btn{
+  background: rgb(143, 58, 151);
+  color: white;
+  border: 1px solid rgb(143, 58, 151);
+  border-radius: 7px;
+  padding: 10px;
+  font-size: 1.2rem;
+  cursor: pointer;
+  margin-top: 10px;
+}
+.add-transaction-btn:hover{
+  background: rgba(143, 58, 151, 0.8);
+  border: 1px solid rgba(143, 58, 151, 0.8);
+  transition: 200ms;
+
+}
+
+.expense-transaction{
+  border-right: 4px solid red;
+}
+.income-transaction{
+  border-right: 4px solid rgb(76, 223, 120);
+}
+
+input.error{
+  border: 1px solid red;
+}
+span{
+  color: red;
 }
